--- a/src/assets/scss/_blog.scss
+++ b/src/assets/scss/_blog.scss
@@ -29,7 +29,7 @@
         color: #fff;
 
         &.pink {
-          background-color: #fb799c;
+          background-color: $theme-color;
         }
 
         &.purple {
