--- a/src/assets/scss/_cart.scss
+++ b/src/assets/scss/_cart.scss
@@ -22,7 +22,7 @@ h3.cart-page-title {
     border: 1px solid #ebebeb;
 
     .order-header {
-      background-color: #fb799c !important;
+      background-color: $theme-color !important;
 
       th {
         color: #fff
@@ -866,7 +866,7 @@ h3.cart-page-title {
                 font-size: 14px;
                 font-weight: 500;
                 text-transform: uppercase;
-                color: #fb799c;
+                color: $theme-color;
                 float: left;
                 width: 100%;
                 text-align: left;
@@ -883,7 +883,7 @@ h3.cart-page-title {
                 font-size: 14px;
                 font-weight: 500;
                 text-transform: uppercase;
-                color: #fb799c;
+                color: $theme-color;
                 float: left;
                 width: 100%;
                 text-align: left;
@@ -900,7 +900,7 @@ h3.cart-page-title {
                 font-size: 14px;
                 font-weight: 500;
                 text-transform: uppercase;
-                color: #fb799c;
+                color: $theme-color;
                 float: left;
                 width: 100%;
                 text-align: left;
@@ -917,7 +917,7 @@ h3.cart-page-title {
                 font-size: 14px;
                 font-weight: 500;
                 text-transform: uppercase;
-                color: #fb799c;
+                color: $theme-color;
                 float: left;
                 width: 100%;
                 text-align: left;
@@ -934,7 +934,7 @@ h3.cart-page-title {
                 font-size: 14px;
                 font-weight: 500;
                 text-transform: uppercase;
-                color: #fb799c;
+                color: $theme-color;
                 float: left;
                 width: 100%;
                 text-align: left;
@@ -951,7 +951,7 @@ h3.cart-page-title {
                 font-size: 14px;
                 font-weight: 500;
                 text-transform: uppercase;
-                color: #fb799c;
+                color: $theme-color;
                 float: left;
                 width: 100%;
                 text-align: left;
@@ -1052,7 +1052,7 @@ h3.cart-page-title {
                 font-size: 14px;
                 font-weight: bold;
                 text-transform: uppercase;
-                color: #fb799c;
+                color: $theme-color;
                 float: left;
                 width: 100%;
                 text-align: left;
@@ -1069,7 +1069,7 @@ h3.cart-page-title {
                 font-size: 14px;
                 font-weight: bold;
                 text-transform: uppercase;
-                color: #fb799c;
+                color: $theme-color;
                 float: left;
                 width: 100%;
                 text-align: left;
@@ -1086,7 +1086,7 @@ h3.cart-page-title {
                 font-size: 14px;
                 font-weight: bold;
                 text-transform: uppercase;
-                color: #fb799c;
+                color: $theme-color;
                 float: left;
                 width: 100%;
                 text-align: left;
@@ -1103,7 +1103,7 @@ h3.cart-page-title {
                 font-size: 14px;
                 font-weight: bold;
                 text-transform: uppercase;
-                color: #fb799c;
+                color: $theme-color;
                 float: left;
                 width: 100%;
                 text-align: left;
@@ -1120,7 +1120,7 @@ h3.cart-page-title {
                 font-size: 14px;
                 font-weight: bold;
                 text-transform: uppercase;
-                color: #fb799c;
+                color: $theme-color;
                 float: left;
                 width: 100%;
                 text-align: left;
@@ -1194,7 +1194,7 @@ h3.cart-page-title {
                 font-size: 14px;
                 font-weight: 500;
                 text-transform: uppercase;
-                color: #fb799c;
+                color: $theme-color;
                 float: left;
                 width: 100%;
                 text-align: left;
@@ -1211,7 +1211,7 @@ h3.cart-page-title {
                 font-size: 14px;
                 font-weight: 500;
                 text-transform: uppercase;
-                color: #fb799c;
+                color: $theme-color;
                 float: left;
                 width: 100%;
                 text-align: left;
@@ -1228,7 +1228,7 @@ h3.cart-page-title {
                 font-size: 14px;
                 font-weight: 500;
                 text-transform: uppercase;
-                color: #fb799c;
+                color: $theme-color;
                 float: left;
                 width: 100%;
                 text-align: left;
@@ -1245,7 +1245,7 @@ h3.cart-page-title {
                 font-size: 14px;
                 font-weight: 500;
                 text-transform: uppercase;
-                color: #fb799c;
+                color: $theme-color;
                 float: left;
                 width: 100%;
                 text-align: left;
@@ -1262,7 +1262,7 @@ h3.cart-page-title {
                 font-size: 14px;
                 font-weight: 500;
                 text-transform: uppercase;
-                color: #fb799c;
+                color: $theme-color;
                 float: left;
                 width: 100%;
                 text-align: left;
@@ -1279,7 +1279,7 @@ h3.cart-page-title {
                 font-size: 14px;
                 font-weight: 500;
                 text-transform: uppercase;
-                color: #fb799c;
+                color: $theme-color;
                 float: left;
                 width: 100%;
                 text-align: left;
@@ -1388,7 +1388,7 @@ h3.cart-page-title {
                 font-size: 14px;
                 font-weight: bold;
                 text-transform: uppercase;
-                color: #fb799c;
+                color: $theme-color;
                 float: left;
                 width: 100%;
                 text-align: left;
@@ -1405,7 +1405,7 @@ h3.cart-page-title {
                 font-size: 14px;
                 font-weight: bold;
                 text-transform: uppercase;
-                color: #fb799c;
+                color: $theme-color;
                 float: left;
                 width: 100%;
                 text-align: left;
@@ -1422,7 +1422,7 @@ h3.cart-page-title {
                 font-size: 14px;
                 font-weight: bold;
                 text-transform: uppercase;
-                color: #fb799c;
+                color: $theme-color;
                 float: left;
                 width: 100%;
                 text-align: left;
@@ -1439,7 +1439,7 @@ h3.cart-page-title {
                 font-size: 14px;
                 font-weight: bold;
                 text-transform: uppercase;
-                color: #fb799c;
+                color: $theme-color;
                 float: left;
                 width: 100%;
                 text-align: left;
@@ -1456,7 +1456,7 @@ h3.cart-page-title {
                 font-size: 14px;
                 font-weight: bold;
                 text-transform: uppercase;
-                color: #fb799c;
+                color: $theme-color;
                 float: left;
                 width: 100%;
                 text-align: left;
@@ -1502,7 +1502,7 @@ h3.cart-page-title {
   }
 
   .print-button {
-    background-color: #fb799c;
+    background-color: $theme-color;
     border: medium none;
     color: #fff;
     display: inline-block;
