--- a/src/assets/scss/_header.scss
+++ b/src/assets/scss/_header.scss
@@ -626,7 +626,7 @@
 
       .user-name {
         font-size: 14px;
-        color: #fb799c;
+        color: $theme-color;
       }
 
       .user-email {
