--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -15,9 +15,9 @@ sans-serif;
 
 $white: #ffffff;
 $black: #000000;
-$grey: #f6f7f8;
-$red: #f6f7f8;
-$green: #f6f7f8;
+$grey: grey;
+$red: red;
+$green: green;
 
 // bg Colors ---------------
 
