--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -58,7 +58,7 @@
     display: flex;
     align-items: center;
     background-color: #f6f6f6;
-    border-top: 5px solid #fb799c;
+    border-top: 5px solid $theme-color;
     color: #5b5858;
     height: 55px;
     // width: 469px;
