--- a/src/assets/scss/_checkout.scss
+++ b/src/assets/scss/_checkout.scss
@@ -469,7 +469,7 @@
     display: flex;
     align-items: center;
     background-color: #f6f6f6;
-    border-top: 5px solid #fb799c;
+    border-top: 5px solid $theme-color;
     color: #5b5858;
     min-height: 55px;
     line-height: 1.6;
