--- a/src/assets/scss/_common.scss
+++ b/src/assets/scss/_common.scss
@@ -37,7 +37,8 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: Arial, Helvetica, sans-serif;;
+  font-family: Arial, Helvetica, sans-serif;
+  ;
   font-weight: 400;
 
   margin-top: 0;
@@ -46,7 +47,8 @@ h6 {
 }
 
 p {
-  font-family: Arial, Helvetica, sans-serif;;
+  font-family: Arial, Helvetica, sans-serif;
+  ;
   font-size: 14px;
   font-weight: 400;
   line-height: 24px;
@@ -1998,7 +2000,7 @@ a.default-btn {
       transition: 0.3s;
 
       color: $white;
-      background-color: #fb799c;
+      background-color: $theme-color;
 
       &:hover {
         color: $white;
@@ -2037,4 +2039,23 @@ a.default-btn {
 
 .bg-black-3 {
   background-color: #202022;
+}
+
+.coupon-applied {
+  color: $green
+}
+
+.promoCode {
+  color: $theme-color;
+  text-align: 'center';
+}
+
+.login-info {
+  font-size: 16;
+  font-weight: 500;
+  color: $theme-color;
+}
+
+.main-color {
+  color: $theme-color
 }
