--- a/src/assets/scss/_preloader.scss
+++ b/src/assets/scss/_preloader.scss
@@ -30,7 +30,7 @@
   width: 50px;
   height: 50px;
   border-radius: 100%;
-  background: #fb799c;
+  background: $theme-color;
   -webkit-animation: preloader 1.3s linear infinite;
   animation: preloader 1.3s linear infinite;
 }
