Loader color changed dynamically

--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -30,7 +30,8 @@ $bg-purple: #f0e0ff;
 $heading-color: #000000;
 
 // Theme Color
-$theme-color: #fb799c;
+// $theme-color: #fb799c;
+$theme-color: var(--theme-color);
 
 // Responsive Variables
 $xx-layout: "only screen and (min-width: 1366px) and (max-width: 1600px)";
