--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -38,6 +38,10 @@
 @import "video-popup";
 
 
+:root {
+    --theme-color: red;
+}
+
 .css-m2td1u {
     position: fixed !important;
     width: 100% !important;
@@ -47,6 +51,11 @@
     justify-content: center;
     background: #0000004a;
     z-index: 99;
+
+    div {
+        left: auto !important;
+        top: auto !important;
+    }
 }
 
 .css-16vsn7r {
