--- a/src/assets/scss/_slider.scss
+++ b/src/assets/scss/_slider.scss
@@ -3327,14 +3327,14 @@
   .site-blocks-cover h2 {
     font-size: 14px;
     font-weight: normal;
-    color: #000;
+    color: #FFFFFF;
     letter-spacing: .2em;
     text-transform: uppercase; }
   .site-blocks-cover h1 {
     font-size: 50px;
     font-weight: 200;
     line-height: 72px !important;
-    color: #000;
+    color: #FFFFFF;
     margin-bottom: 30px;
     text-transform: uppercase; }
     @media (min-width: 768px) {
@@ -3376,7 +3376,7 @@
             box-shadow: none; }
           .btn.btn-black {
             padding: 12px 30px;
-            background: #000;
+            background: rgba(101, 31, 27, 0.8)00;
             color: #fff; }
             .btn.btn-black:hover, .btn.btn-black:active, .btn.btn-black:focus {
               background-color: #333333; 
