--- a/src/assets/scss/_header.scss
+++ b/src/assets/scss/_header.scss
@@ -181,7 +181,7 @@
     ul {
       
       display: block;
-      margin-top : 2.5%;
+      margin-top : 3.6%; /* Changer */
       text-align: center;
 
       li {
