--- a/src/assets/scss/_product.scss
+++ b/src/assets/scss/_product.scss
@@ -379,7 +379,7 @@
       .pro-cart {
         font-size: 14px;
 
-        width: calc(100% - 48px - 48px);
+        width: 100%;
 
         transition-delay: 0.1s;
       }
