--- a/src/assets/scss/_slider.scss
+++ b/src/assets/scss/_slider.scss
@@ -3331,7 +3331,7 @@
     letter-spacing: .2em;
     text-transform: uppercase; }
   .site-blocks-cover h1 {
-    font-size: 50px;
+    font-size: 10vw;
     font-weight: 200;
     line-height: 72px !important;
     color: #FFFFFF;
@@ -3339,7 +3339,7 @@
     text-transform: uppercase; }
     @media (min-width: 768px) {
       .site-blocks-cover h1 {
-        font-size: 50px; } }
+        font-size: 4vw; } }
   .site-blocks-cover p {
     color: #333333;
     font-size: 20px;
